--- a/App-React/ios/restaurant/Info.plist
+++ b/App-React/ios/restaurant/Info.plist
@@ -85,6 +85,7 @@
 		<string>DS-DIGIB.TTF</string>
 		<string>DS-DIGII.TTF</string>
 		<string>DS-DIGIT.TTF</string>
+		<string>DS-DIGI.ttf</string>
 	</array>
 </dict>
 </plist>
