--- a/App-React/package.json
+++ b/App-React/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^12.9.0",
     "@react-native-firebase/database": "^12.9.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
+    "@react-navigation/bottom-tabs": "^6.0.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "@reduxjs/toolkit": "^1.6.1",
@@ -28,11 +29,13 @@
     "lottie-react-native": "^4.0.3",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.0",
+
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
