Create Line chart

--- a/App-React/android/app/build.gradle
+++ b/App-React/android/app/build.gradle
@@ -206,6 +206,9 @@ dependencies {
 
     implementation project(':react-native-fbsdk-next')
 
+    implementation project(':react-native-svg')
+
+
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
