--- a/App-React/package.json
+++ b/App-React/package.json
@@ -32,8 +32,10 @@
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.1",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
@@ -41,6 +43,7 @@
     "styled-components": "^5.3.1",
     "typesafe-actions": "^5.1.0",
     "uuid": "^8.3.2",
+    "victory-native": "^35.5.5",
     "yup": "^0.32.9"
   },
   "devDependencies": {
