--- a/App-React/package.json
+++ b/App-React/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^12.9.0",
     "@react-native-firebase/auth": "^12.9.0",
     "@react-native-firebase/database": "^12.9.0",
+    "@react-native-firebase/firestore": "^12.9.2",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/bottom-tabs": "^6.0.8",
     "@react-navigation/native": "^6.0.2",
