--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,8 @@
     "date-fns": "^2.25.0",
     "express": "^4.17.1",
     "firebase": "^9.1.2",
+    "firebase-admin": "^10.0.0",
+    "install": "^0.13.0",
     "serialport": "^9.2.4",
     "socket.io": "^4.2.0"
   },
