Add push notification

--- a/App-React/android/app/build.gradle
+++ b/App-React/android/app/build.gradle
@@ -208,6 +208,16 @@ dependencies {
 
     implementation project(':react-native-svg')
 
+    dependencies {
+        // Import the BoM for the Firebase platform
+        implementation platform('com.google.firebase:firebase-bom:28.4.1')
+
+        // Declare the dependencies for the Firebase Cloud Messaging and Analytics libraries
+        // When using the BoM, you don't specify versions in Firebase library dependencies
+        implementation 'com.google.firebase:firebase-messaging'
+        implementation 'com.google.firebase:firebase-analytics'
+    }
+
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
