--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,7 +8,9 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "date-fns": "^2.25.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.1.2",
     "firebase-admin": "^10.0.0",
