--- a/App-React/package.json
+++ b/App-React/package.json
@@ -27,6 +27,7 @@
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
     "axios": "^0.23.0",
+    "date-fns": "^2.25.0",
     "firebase": "^9.1.2",
     "lottie-react-native": "^4.0.3",
     "react": "17.0.2",
