--- a/App-React/package.json
+++ b/App-React/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.9.0",
     "@react-native-firebase/auth": "^12.9.0",
@@ -34,6 +35,7 @@
     "react-native": "0.65.1",
     "react-native-fbsdk-next": "^4.6.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.10.0",
     "react-native-reanimated": "^2.2.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "^3.3.2",
