--- a/App-React/package.json
+++ b/App-React/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "^3.7.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.14.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-tools": "^3.2.0",
